assets/scss/components.scss
/* ... */
// /////////////////////////////////////////////////////////////// Showcase View
// -----------------------------------------------------------------------------

.page-showcase {
  .logo-wrapper {
    text#Filecoin {
      fill: $darkGrey;
    }
  }
  #taxonomy-grid {
    .taxonomy {
      @include shadow1;
      border: 1px solid $lightGrey;
      margin-top: 1rem;
    }
    .taxonomy-label {
      @include shadow1;
      border: 1px solid $lightGrey;
      color: $darkGrey; 
    }
  }
}

